fix modal backdrop covering modal

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -179,8 +179,10 @@ input[type=range]:focus::-ms-fill-upper {
 
 .modal-backdrop.modal-backdrop-transparent {
   background: #ffffff;
+
 }
 .modal-backdrop.modal-backdrop-transparent.in {
   opacity: .9;
   filter: alpha(opacity=90);
+  z-index: 9;
 }
